# Socket

./: CMakeLists.txt
src/: receiver.cpp  receiver.h  sender.cpp  sender.h
